# edge-manageability-framework

./: '  .editorconfig  .gitignore  .gitleaks.toml  .gitleaksignore  .golangci.yml  .mage-local-sample.yaml  .shellcheckrc  .test-dependencies.yaml  .tool-versions  .trivyignore  .trivyignore.yaml  CONTRIBUTING.md  GITEA_DEPLOYMENT_FIX_SUMMARY.md  INVESTIGATION_RESULTS.md  Installer  John.md  KEYCLOAK_HTTP_CLIENT_CONFIG.md  KEYCLOAK_INVESTIGATION_SUMMARY.md  KEYCLOAK_NETWORK_ARCHITECTURE.md  KEYCLOAK_OIDC_SETUP.md  KEYCLOAK_OPERATOR_ARCHITECTURE.md  KEYCLOAK_QUICK_REFERENCE.md  MAINTENANCE_MODE_GUIDE.md  Magefile.go  Makefile  README.md  REUSE.toml  SINGLE-IP-POC.md  TINKERBELL_REQUEST_FLOW_DIAGRAMS.md  VERSION  audit-policy.yaml  bug.yml  cm.yaml  config.yml  configs.yaml  delete_file  deploy-nexus-replacement-helmfile.sh  deploy-nexus-replacement.sh  diff.diff  (+12 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
___.github/: CODEOWNERS
bootstrap/: argocd.yaml  gitea.yaml  harbor-oci-cert.yaml  lb.yaml  metallb.yaml  nodeport.yaml  postgres.yaml
buildall/: .gitignore  Makefile  README.md  REUSE.toml  all_repo_list  env.sh  repo_list  requirements.txt
buildall/scripts/ba_lib/: pyproject.toml
buildall/scripts/ba_lib/ba_lib/: __init__.py
ci/: collect_failed_pod_logs.sh  collect_pod_logs.sh  diagnostics_convergence.py  kubectl-top  onprem-deploy-time.sh  (+1 more)
debug/: README.md  (+10 more)
e2e-tests/installer/: .pylintrc  README.md  auto-install.yaml  auto-rstoken.py  auto-uninstall.yaml  auto_install.py  fake-install.sh  pyproject.toml  requirements.txt  shellcryer.sh
(+1962 files in other folders)
